--- a/R_unmarked.Rmd
+++ b/R_unmarked.Rmd
@@ -128,9 +128,15 @@ data %>%
 
 
 #unmarkedFrame formats data to a specific model fitting function.  A special class of object used in this package for organizing our data.
+#Unmarked helps users fit models accounting for the imperfect detection of unmarked individuals.
+#Can also do standard occupancy models, distance sampling, and colonization/extinction models.
 
 ```
 
+-unmarkedFrameOccu requires: 2 dataframes, a list of dataframes.
+--> y: dataframe of presense absence records.  Rows are sites, columns are repeat visits.
+--> siteCovs: a datafrome of the site-level covariates.  Things that DON"T change between visits to a particular site(elevation, annual rainfall, distance from road, etc.).  One column per covariate.
+--> obsCovs:  A list of dataframes for the observation level covariates.  Each covariate is it's own dataframe, rows are sites, and columns are repeat visits..  Might be environmental conditions like weather, or methodological variables like survey method (camera trap, pitfall trap, spotlighting, etc).  Think of having datafram for lunar illumination, with rows as different sites, columns as repeat visits.  Another dataframe frame for canopy cover, with rows as sites and columns as repeat visits.  Another dataframe for temperature, with rows as sites and columns as complete visits.  All these various dataframes would be in a list of obsCovs.
 ```{r}
 
 ```
